--- a/MyTemplate/css/main-newdesign.css
+++ b/MyTemplate/css/main-newdesign.css
@@ -4187,4 +4187,7 @@ li.Dynamic::before {
     position: absolute !important;
     background-color: transparent;
   }
+   .modal{
+    height: 1000px;
+  }
 }
