--- a/MyTemplate/css/main-newdesign.css
+++ b/MyTemplate/css/main-newdesign.css
@@ -4190,4 +4190,9 @@ li.Dynamic::before {
    .modal{
     height: 1000px;
   }
+   .ZoomIn:hover{
+      transform: scale(1.1);
+      -ms-transform: scale(1.1); /* IE 9 */
+      -webkit-transform: scale(1.1); /* Safari 3-8 */
+  }
 }
