--- a/practice-website/css/daarzee.css
+++ b/practice-website/css/daarzee.css
@@ -18,7 +18,7 @@ body{
   font-weight: 800;
 }
 #firstSection .HomeBg{
-  background: url('/images/Weight.jpg');
+  background: url('https://rohitkotian27.github.io/practice-website/images/Weight.jpg');
   width: 100%;
   height: 600px;
   background-size: cover;
